Fix the border-top to keep align with new book create card in size

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ img[class="display-mode-button"]:hover
   grid-template-rows: 0.5fr 2fr 2fr 2fr auto; /*5 rows allocated*/
   justify-items: start;
   padding: 10px;
-  border-top: 5px solid blue;
+  border-top: 8px solid blue;
   box-shadow: 3px 3px 12px #aaa8a8;
   border-radius: 8px;
   background-color: white;
